--- a/website/static/index.html
+++ b/website/static/index.html
@@ -7,7 +7,7 @@
       <script type="text/javascript">
         window.location.href = 'docs/two-sum';
       </script>
-      <title>LeetCode Site Generator</title>
+      <title>LeetCode</title>
     </head>
 
     <body>
